dist/homebox/Ingress.homebox.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: homebox
  namespace: homebox
spec:
  rules:
    - host: homebox.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: homebox
                port:
                  number: 7745
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - homebox.cmdcentral.xyz
      secretName: homebox-tls
